Add update transaction endpoint
